--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Web06</title>
+  <title>Loja de Bruxaria</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="header">
+    <div class="logo">
+      <a href="/vitrine"> 
+        <img src=".\assets\logo.png" alt="Logo" height="40">
+      </a>
+    </div>
+    <div class="search-box">
+      <input type="text" class="search-input" placeholder="Buscar...">
+      <button class="search-button">Buscar</button>
+    </div>
+    <div class="user-icon"></div>
+  </div>
   <app-root></app-root>
 </body>
 </html>
